--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -738,9 +738,7 @@
     <string name="preference_title_turn_off_history">Turn off history</string>
     <string name="preference_summary_turn_off_history">Browse articles without saving any reading history.</string>
     <string name="history_turned_off_title">History is turned off</string>
-    <string name="history_turned_off_message">History is turned off. Turn it on in the settings to keep track of what you\'ve read.</string>
-    <string name="no_history_title">History is turned off</string>
-    <string name="no_history_message">To turn history back on, go to settings</string>
+    <string name="history_turned_off_message">To turn history back on, go to settings</string>
     <!-- /No History -->
 
 </resources>
