--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -528,6 +528,7 @@
     <!-- The Feed -->
     <string name="view_continue_reading_card_title">Continue reading</string>
     <string name="view_because_you_read_card_title">Because you read</string>
+    <string name="view_categories_card_title">Categories</string>
     <string name="view_random_card_title">Randomizer</string>
     <string name="view_random_card_subtitle">Flip through random articles to read from Wikipedia.</string>
     <string name="view_random_card_action">Roll the dice</string>
@@ -745,7 +746,7 @@
     <string name="image_search_dialog_gallery">Choose from gallery</string>
     <!-- /Image Search Dialog -->
 
-    <!-- No History !-->
+    <!-- No History -->
     <string name="preference_title_turn_off_history">Turn off history</string>
     <string name="preference_summary_turn_off_history">Browse articles without saving any reading history.</string>
     <string name="history_turned_off_title">History is turned off</string>
@@ -765,4 +766,19 @@
     <string name="tts_speech_rate_double">2x</string>
     <string name="tts_speech_rate_triple">3x</string>
     <!-- /Text-to-speech -->
+    
+    <!-- Categories -->
+    <string name="top_categories">Top Categories</string>
+    <string name="categories_geography">Geography</string>
+    <string name="categories_health">Health</string>
+    <string name="categories_philosophy">Philosophy</string>
+    <string name="categories_mathematics">Mathematics</string>
+    <string name="categories_nature">Nature</string>
+    <string name="categories_technology">Technology</string>
+    <string name="categories_religion">Religion</string>
+    <string name="categories_people">People</string>
+    <string name="categories_history">History</string>
+    <string name="categories_society">Society</string>
+    <string name="categories_human_activities">Human Activities</string>
+    <string name="categories_culture">Culture</string>
 </resources>
