[#15] disable translate for non-english articles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="menu_text_select_share">Share</string>
     <string name="menu_text_select_define">Define</string>
     <string name="menu_text_select_hear">Hear</string>
+    <string name="menu_text_select_translate">Translate</string>
     <string name="menu_text_select_edit_here">Edit here</string>
 
     <!-- Nearby -->
@@ -214,6 +215,7 @@
     <string name="find_previous">Find previous</string>
     <string name="find_first_occurence">This is the first occurrence</string>
     <string name="find_last_occurence">This is the last occurrence</string>
+    <string name="translate_dialog_no_translation">Cannot Find Translation</string>
     <!-- need this and next? -->
     <string name="abusefilter_title_warn">This may be an unconstructive edit. Are you sure you want to publish it?</string>
     <string name="abusefilter_title_disallow">You cannot publish this edit. Please go back and change it.</string>
