--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -787,4 +787,7 @@
     <string name="categories_human_activities">Human activities</string>
     <string name="categories_culture">Culture</string>
     <string name="category_card_text">card_text</string>
+
+    <!-- Discover -->
+    <string name="nav_item_discover">Discover</string>
 </resources>
