[#79] Fixing minor UI issues, again.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -790,4 +790,5 @@
     <string name="category_card_text">card_text</string>
     <string name="search_hint_categories">Search for a category</string>
     <string name="chat_title">Chat</string>
+    <string name="input_hint">Enter message</string>
 </resources>
