[#72] Implement tab layout for 'Saved' tab (Reading Lists + Notes)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="menu_page_add_to_list">Add to reading list</string>
     <string name="menu_page_share">Share link</string>
     <string name="menu_page_open_a_new_tab">Open a new tab</string>
-    <string name="menu_page_reading_lists">Reading lists</string>
+    <string name="menu_page_saved">Saved</string>
     <string name="menu_page_recently_viewed">Recently viewed</string>
 
     <!-- Long press menu -->
@@ -786,7 +786,7 @@
     <string name="tts_speech_rate_double">2x</string>
     <string name="tts_speech_rate_triple">3x</string>
     <!-- /Text-to-speech -->
-    
+
     <!-- Categories -->
     <string name="top_categories">Top Categories</string>
     <string name="recommended_categories">Recommended for You</string>
@@ -806,4 +806,6 @@
     <string name="search_hint_categories">Search for a category</string>
     <string name="chat_title">Chat</string>
     <string name="input_hint">Enter message</string>
+    <string name="nav_item_saved">Saved</string>
+    <string name="search_hint_notes">Search my notes</string>
 </resources>
