[#76] Added handling for empty notes list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -811,5 +811,6 @@
 
     <!-- Notes -->
     <string name="notes">Notes</string>
+    <string name="notes_list_empty">No notes saved for this article.</string>
     <!-- /Notes -->
 </resources>
