--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -808,4 +808,5 @@
     <string name="input_hint">Enter message</string>
     <string name="nav_item_saved">Saved</string>
     <string name="search_hint_notes">Search my notes</string>
+    <string name="menu_notes_list_delete">Delete</string>
 </resources>
