[#72] Complete notes list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -809,4 +809,5 @@
     <string name="nav_item_saved">Saved</string>
     <string name="search_hint_notes">Search my notes</string>
     <string name="menu_notes_list_delete">Delete</string>
+    <string name="notes_list_delete_confirm">Are you sure you want to delete this note?</string>
 </resources>
