--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -820,6 +820,9 @@
     <string name="notes_list_delete_confirm">Are you sure you want to delete this note?</string>
     <string name="menu_note_select_copy">Copy</string>
     <string name="menu_note_select_delete">Delete</string>
+    <string name="notes_item_back">Back</string>
+    <string name="notes_view_article">View Article</string>
+    <string name="notes_item_description">Note description</string>
     <!-- /Notes -->
   
 </resources>
