[#71] Fixed functionality and linked Note Saving with UI button, also added confirmation message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -290,6 +290,7 @@
     <string name="format_error_server_message">Message: \"%s\"</string>
     <string name="address_copied">Address copied to clipboard.</string>
     <string name="text_copied">Text copied to clipboard.</string>
+    <string name="note_saved">Note Saved.</string>
     <string name="button_continue_to_article">Read article</string>
     <string name="button_continue_to_disambiguation">View similar pages</string>
     <string name="link_preview_disambiguation_description">This title relates to more than one page:</string>
