--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -824,6 +824,8 @@
     <string name="notes_view_article">View article</string>
     <string name="notes_item_description">Note description</string>
     <string name="preference_key_notes_list_sort_mode">notesListSortMode</string>
+    <string name="note_deleted">Note deleted</string>
+    <string name="note_deleted_undo">Undo</string>
     <!-- /Notes -->
   
 </resources>
